--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   dio: ^5.8.0+1
   injectable: ^2.5.0
   get_it: ^8.0.3
+  flutter_dotenv: ^5.2.1
+  permission_handler: ^11.3.1
+  web_socket_channel: ^3.0.1
+  record: ^5.1.2
+  audioplayers: ^6.1.0
 
 dev_dependencies:
   flutter_test:
@@ -42,3 +47,4 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - .env
