--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   web_socket_channel: ^3.0.1
   record: ^5.1.2
   audioplayers: ^6.1.0
+  flutter_secure_storage: ^8.1.0
 
 dev_dependencies:
   flutter_test:
