--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_markdown: ^0.7.4+1
   url_launcher: ^6.3.0
   shared_preferences: ^2.3.3
+  bloc: ^8.1.4
 
 dev_dependencies:
   sentry_dart_plugin: ^2.4.1
