--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   url_launcher: ^6.3.0
   shared_preferences: ^2.3.3
   bloc: ^8.1.4
+  logger: ^2.5.0
 
 dev_dependencies:
   sentry_dart_plugin: ^2.4.1
