--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   google_fonts: ^6.1.0
   iconsax: ^0.0.8
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.2.0
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
   pinput: ^5.0.1
